--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.max-w-7xl {
+    max-width: 100rem !important;
+}
+.px-4 {
+    padding-left: 0.5rem !important;
+    padding-right: 0.5rem !important;
+}
